<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <EditText android:id="@+id/edittext_firstname" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_firstname" android:inputType="textPersonName">
                <requestFocus />
            </EditText>
            <EditText android:id="@+id/edittext_lastname" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_lastname" android:inputType="textPersonName"/>
            <EditText android:id="@+id/edittext_birthdate" android:layout_width="match_parent" android:layout_height="wrap_content" android:editable="false" android:hint="@string/hint_birthdate"/>
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>