<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_margin" >

            <Button
                android:id="@+id/button_profilepic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:drawableTop="@android:drawable/ic_menu_report_image" />

            <EditText
                android:id="@+id/edittext_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edittext_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_birthdate" />

            <RadioGroup
                android:id="@+id/radiogroup_gender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/button_facebooklink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_facebook"
                android:text="@string/facebook_notlinked" />

            <Button
                android:id="@+id/button_twitterlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_twitter"
                android:text="@string/twitter_notlinked" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_cancel" />
 <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/button_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/button_create" />

    </LinearLayout>

</LinearLayout>